--- a/frontendVue/mockup/index.html
+++ b/frontendVue/mockup/index.html
@@ -12,6 +12,24 @@
   <link id="pagestyle" href="css/sketchy.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Albertina</title>
+  <style>
+  #effect{
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+  }
+  .highlight{
+    background-color: red;
+    width: 200px;
+  }
+  .shrink{
+    background-color: gray;
+    width: 50px;
+  }
+  .blue{
+    background-color: blue;
+  }
+  </style>
 </head>
 
 <body>
@@ -35,23 +53,6 @@
     </div>
   </nav>
 
-
-  <section>
-    <div class="d-flex flex-wrap">
-      <div class="card border-primary mb-3" style="max-width: 20rem;">
-        <img src="img/old.png" class="card-img-top" alt="esta é a albertina">
-        <div class="card-body">
-          <h4 class="card-title">Primary card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-
-
   <div class="form-group">
     <div class="custom-control custom-switch">
       <input type="checkbox" class="custom-control-input" id="customSwitch1" onClick="setDarkMode()">
@@ -59,12 +60,37 @@
     </div>
   </div>
 
+  <section id="app">
+    <div class="container">
 
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+    </div>
+  </section>
+
+
+  <section>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  </section>
+
+  <script>
+    new Vue({
+      el: "#app",
+      data: {
+        ingredients: ['meat','fruit','cookies'],
+        persons: [
+          {name: 'Max', age:27 , color: 'red'},
+          {name: 'Joao', age:28 , color: 'blue'},
+        ]
+      },
+      methods: {
+        
+      }
+    })
+  </script>
 
   <script>
     // Get the current year for the copyright
@@ -74,13 +100,27 @@
     }
     function setDarkMode() {
       let buttonToggler = document.getElementById("customSwitch1");
-        if (buttonToggler.checked) {
-          swapStyleSheet("css/bootstrap.min.css");
-        } else {
-          swapStyleSheet("css/sketchy.min.css");
-        }      
+      if (buttonToggler.checked) {
+        swapStyleSheet("css/bootstrap.min.css");
+      } else {
+        swapStyleSheet("css/sketchy.min.css");
+      }
     }
   </script>
 </body>
 
 </html>
+
+<!--  
+  <section>
+    <div class="d-flex flex-wrap">
+      <div class="card border-primary mb-3" style="max-width: 20rem;">
+        <img src="" class="card-img-top" alt="esta é a albertina">
+        <div class="card-body">
+          <h4 class="card-title">Primary card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+-->
