--- a/frontendVue/mockup/index.html
+++ b/frontendVue/mockup/index.html
@@ -11,28 +11,33 @@
   -->
   <link id="pagestyle" href="css/sketchy.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script>
+    var swapStyleSheet = function (sheet) {
+        document.getElementById("pagestyle").setAttribute("href", "{{ site.url }}{{ site.baseurl }}/public/css/"+controlsheetinput(sheet)+".min.css");
+        storebackground(sheet);
+    }
+    var storebackground = function (swapstylesheet) {
+        localStorage.setItem("sheetKey", swapstylesheet); //you need to give a key and value
+    }
+    var loadbackground = function () {
+        let sheetKey = localStorage.getItem("sheetKey");
+        document.getElementById("pagestyle").setAttribute("href", "{{ site.url }}{{ site.baseurl }}/public/css/"+controlsheetinput(sheetKey)+".min.css");
+    }
+    var controlsheetinput = function(sheet){
+        switch ( sheet ) {
+            case "sketchy":
+            case "bootstrap":
+            case "darkly":
+            break;
+            default:
+                sheet = "bootstrap";
+                localStorage.setItem("sheetKey", sheet);
+        }
+        return sheet;
+    }
+    window.onload = loadbackground();
+  </script>
   <title>Albertina</title>
-  <style>
-<<<<<<< HEAD:frontendVue/mockup/index.html
-=======
-  #effect{
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
-  }
-  .highlight{
-    background-color: red;
-    width: 200px;
-  }
-  .shrink{
-    background-color: gray;
-    width: 50px;
-  }
-  .blue{
-    background-color: blue;
-  }
->>>>>>> 1f90c3f3c2f3700f7b11b43cd74e0b56dbdf46d4:mockup/index.html
-  </style>
 </head>
 
 <body>
@@ -47,10 +52,23 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end text-center" id="navbarBar">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="#" class="nav-link active" title="bom dia">
-              <i class="fas fa-users-cog"></i> Bom dia</a>
-          </li>
+          <li class="dropdown nav-item">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fas fa-users-cog"> </i>Themes <b class="caret"></b></a>
+              <ul class="dropdown-menu" onchange="swapStyleSheet(this.value)">
+                <li><a href="#" value="bootstrap">Default</a></li>
+                <li><a href="#" value="sketchy">Amelia</a></li>
+                <li><a href="#" value="cerulean">Cerulean</a></li>
+                <li><a href="#" value="cosmo" >Cosmo</a></li>
+                <li><a href="#" value="cyborg" >Cyborg</a></li>
+                <li><a href="#" value="flatly" >Flatly</a></li>
+                <li><a href="#" value="journal" >Journal</a></li>
+                <li><a href="#" value="readable" >Readable</a></li>
+                <li><a href="#" value="simplex" >Simplex</a></li>
+                <li><a href="#" value="slate" >Slate</a></li>
+                <li><a href="#" value="spacelab" >Spacelab</a></li>
+                <li><a href="#" value="united" >United</a></li>
+              </ul>
+            </li>
         </ul>
       </div>
     </div>
@@ -98,17 +116,11 @@
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
-    function swapStyleSheet(sheet) {
-      document.getElementById("pagestyle").setAttribute("href", sheet);
-    }
-    function setDarkMode() {
-      let buttonToggler = document.getElementById("customSwitch1");
-      if (buttonToggler.checked) {
-        swapStyleSheet("css/bootstrap.min.css");
-      } else {
-        swapStyleSheet("css/sketchy.min.css");
-      }
-    }
+
+	$("input[name=theme]").change(function () {
+		swapStyleSheet(this.value);
+	});
+
   </script>
 </body>
 
