corrected the dist file for the site

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Albertina</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sketchy/bootstrap.min.css" rel="stylesheet" integrity="sha384-2kOE+STGAkgemIkUbGtoZ8dJLqfvJ/xzRnimSkQN7viOfwRvWseF7lqcuNXmjwrL" crossorigin="anonymous">
   </head>
   <body>
     <script src="https://unpkg.com/vue"></script>
-    <script src="./albertina-wc/dist/a-albertina.min.js"></script>
+    <script src="./a-albertina.min.js"></script>
     <a-albertina></a-albertina>
   </body>
 </html>
