added favicon and removed console errors

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="pt">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="manifest" href="./manifest.json"> -->
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <title>Albertina</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sketchy/bootstrap.min.css" rel="stylesheet" integrity="sha384-2kOE+STGAkgemIkUbGtoZ8dJLqfvJ/xzRnimSkQN7viOfwRvWseF7lqcuNXmjwrL" crossorigin="anonymous">
+    <link href="./css/bootstrap.min.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <script src="https://unpkg.com/vue"></script>
