--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="manifest" href="./manifest.json"> -->
-    <meta name="theme-color" content="#ffffff">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <meta charset="utf-8">
-    <title>Albertina</title>
-    <link href="./css/bootstrap.min.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="./a-albertina.min.js"></script>
-    <a-albertina></a-albertina>
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>albertina-wc</title><link href=/css/app.d599b080.css rel=preload as=style><link href=/js/app.1fd8e4ba.js rel=preload as=script><link href=/js/chunk-vendors.716ef145.js rel=preload as=script><link href=/css/app.d599b080.css rel=stylesheet></head><body><noscript><strong>We're sorry but albertina-wc doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script async src="https://www.googletagmanager.com/gtag/js?id=G-21T731F76X"></script><script>window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-21T731F76X');</script><script src=/js/chunk-vendors.716ef145.js></script><script src=/js/app.1fd8e4ba.js></script></body></html>
